--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ info.app.name=Spring Boot RESTful Web Service
 
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
+logging.level.org.springframework.cache=DEBUG
 
 logging.file=logs/demo.log
 #logging.path=logs
