Add basic JMS support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ management.context-path=/actuators
 #security.basic.enabled=false
 #security.user.name=chris
 #security.user.password=justdoit
+
+spring.hornetq.embedded.queues=greetings
