--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,4 @@ management.context-path=/actuators
 #security.user.name=chris
 #security.user.password=justdoit
 
-spring.hornetq.embedded.queues=greetings
+spring.hornetq.embedded.queues=greetings, greetingStatus
